[package]
name = "stage2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libseccomp = { version = "0.3.0", features = ["const-syscall"] }
libseccomp-sys = "0.2.1"
log = "0.4.17"
nix = "0.26.2"
procfs = { version = "0.15.1", default-features = false }
threadpool = "1.8.1"
env_logger = "0.9"
